--- a/404.html
+++ b/404.html
@@ -13,9 +13,9 @@
 <div id="content">
 <h1 class="title">LZ</h1>
 
-<div id="outline-container-orgc95d5f6" class="outline-2">
-<h2 id="orgc95d5f6">404 - page not found</h2>
-<div class="outline-text-2" id="text-orgc95d5f6">
+<div id="outline-container-org4a8220a" class="outline-2">
+<h2 id="org4a8220a">404 - page not found</h2>
+<div class="outline-text-2" id="text-org4a8220a">
 <p>
 my bad probably, i moved some stuff around. head <a href="https://larzeitlin.github.io">home</a> to find what you are looking for.
 </p>
