--- a/ring-modulation.html
+++ b/ring-modulation.html
@@ -38,9 +38,9 @@
 <a href="./index.html">home</a>
 </p>
 
-<div id="outline-container-org39f72da" class="outline-2">
-<h2 id="org39f72da">Ring Modulation and Frequency Shifting</h2>
-<div class="outline-text-2" id="text-org39f72da">
+<div id="outline-container-org73a7cf4" class="outline-2">
+<h2 id="org73a7cf4">Ring Modulation and Frequency Shifting</h2>
+<div class="outline-text-2" id="text-org73a7cf4">
 <p>
 I started reading about this topic when looking for a computationally
 cheap way of doing frequency shifting. This is distinct from pitch
@@ -74,9 +74,9 @@ to it all&#x2026;
 </p>
 </div>
 
-<div id="outline-container-orgf48670d" class="outline-3">
-<h3 id="orgf48670d">Rethinking basic operations</h3>
-<div class="outline-text-3" id="text-orgf48670d">
+<div id="outline-container-org745c8bd" class="outline-3">
+<h3 id="org745c8bd">Rethinking basic operations</h3>
+<div class="outline-text-3" id="text-org745c8bd">
 <p>
 When we think about basic mathematical operations (addition,
 subtraction, multiplication, division), our instincts are based in
@@ -96,9 +96,9 @@ basic operations.
 </p>
 </div>
 
-<div id="outline-container-orgda6dba4" class="outline-4">
-<h4 id="orgda6dba4">Addition and Subtraction</h4>
-<div class="outline-text-4" id="text-orgda6dba4">
+<div id="outline-container-orge383498" class="outline-4">
+<h4 id="orge383498">Addition and Subtraction</h4>
+<div class="outline-text-4" id="text-orge383498">
 <p>
 Thinking about the boxes of apples and anti-apples, subtraction and
 addition are not really looking so opposite any more, in fact they are
@@ -111,9 +111,9 @@ inversed, but the auditory result is pretty similar to the addition.
 </div>
 </div>
 
-<div id="outline-container-org3664d40" class="outline-4">
-<h4 id="org3664d40">Multiplication shows similarity</h4>
-<div class="outline-text-4" id="text-org3664d40">
+<div id="outline-container-orgf152bc2" class="outline-4">
+<h4 id="orgf152bc2">Multiplication shows similarity</h4>
+<div class="outline-text-4" id="text-orgf152bc2">
 <p>
 Rather than thinking of multiplication as an increaser, I like to
 visualise it as a <i>test of similarity</i>. It seems like a strange way to
@@ -145,9 +145,9 @@ having a similar sign)</li>
 </div>
 </div>
 
-<div id="outline-container-org9f06c80" class="outline-3">
-<h3 id="org9f06c80">Adding and Multiplying signals</h3>
-<div class="outline-text-3" id="text-org9f06c80">
+<div id="outline-container-org9dd66e6" class="outline-3">
+<h3 id="org9dd66e6">Adding and Multiplying signals</h3>
+<div class="outline-text-3" id="text-org9dd66e6">
 <p>
 So, how about we multiply some signals together? This is effectively
 ring modulation. Ring modulation gets its name from the circular
@@ -302,9 +302,9 @@ from 0 at their own speed.
 </div>
 </div>
 
-<div id="outline-container-org81ee952" class="outline-3">
-<h3 id="org81ee952">Let's get Triggy with it&#x2026;</h3>
-<div class="outline-text-3" id="text-org81ee952">
+<div id="outline-container-org17fc1c3" class="outline-3">
+<h3 id="org17fc1c3">Let's get Triggy with it&#x2026;</h3>
+<div class="outline-text-3" id="text-org17fc1c3">
 <p>
 We can see the concept from above taking place in these trig identities.
 </p>
@@ -380,9 +380,9 @@ shifter.
 </div>
 </div>
 
-<div id="outline-container-org3f19b2f" class="outline-3">
-<h3 id="org3f19b2f">SSB Modulation</h3>
-<div class="outline-text-3" id="text-org3f19b2f">
+<div id="outline-container-orge11e85e" class="outline-3">
+<h3 id="orge11e85e">SSB Modulation</h3>
+<div class="outline-text-3" id="text-orge11e85e">
 <p>
 Here we shift gears and start looking at this all in the frequency
 domain.
@@ -447,9 +447,9 @@ what we are after is a Hilbert Transform of our input signal.
 </div>
 </div>
 
-<div id="outline-container-org519570f" class="outline-3">
-<h3 id="org519570f">Hilbert Transform</h3>
-<div class="outline-text-3" id="text-org519570f">
+<div id="outline-container-org1fc7832" class="outline-3">
+<h3 id="org1fc7832">Hilbert Transform</h3>
+<div class="outline-text-3" id="text-org1fc7832">
 <p>
 The <a href="https://en.wikipedia.org/wiki/Hilbert_transform">Hilbert
 Transform</a> takes a time domain signal and returns a time domain signal
@@ -463,9 +463,9 @@ network of all-pass filters.
 </p>
 </div>
 
-<div id="outline-container-org04d679d" class="outline-4">
-<h4 id="org04d679d">Phase shifting with All-Pass Filters</h4>
-<div class="outline-text-4" id="text-org04d679d">
+<div id="outline-container-orgdec0f02" class="outline-4">
+<h4 id="orgdec0f02">Phase shifting with All-Pass Filters</h4>
+<div class="outline-text-4" id="text-orgdec0f02">
 <p>
 All-pass filters affect the phase spectrum of a signal without changing
 the overall energy at each frequency. The result by itself is barely
@@ -508,9 +508,9 @@ why to see why
 </div>
 </div>
 
-<div id="outline-container-org0773a1c" class="outline-3">
-<h3 id="org0773a1c">Aliasing</h3>
-<div class="outline-text-3" id="text-org0773a1c">
+<div id="outline-container-orge33ad93" class="outline-3">
+<h3 id="orge33ad93">Aliasing</h3>
+<div class="outline-text-3" id="text-orge33ad93">
 <p>
 If you've taken all the info above, put it together and build a
 frequency shifter then well done! You may be annoyed to hear some nasty
@@ -526,9 +526,9 @@ possible.
 </div>
 </div>
 
-<div id="outline-container-org41eff68" class="outline-3">
-<h3 id="org41eff68">Gotchas and stuff</h3>
-<div class="outline-text-3" id="text-org41eff68">
+<div id="outline-container-org7ca3c2e" class="outline-3">
+<h3 id="org7ca3c2e">Gotchas and stuff</h3>
+<div class="outline-text-3" id="text-org7ca3c2e">
 <p>
 Some weird concepts in this one. I spent a long time being concerned
 about the two sidebands overlapping, and how could you possibly isolate
